[tool.poetry]
name = "twitter-analytics"
version = "0.1.0"
description = ""
authors = ["Bohdan Solianyk <bohdan_solianyk@epam.com>"]
readme = "README.md"
packages = [{include = "twitter_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
pylint = "^2.16.1"
wrapt = "^1.14.1"
dill = "^0.3.6"
bandit = "^1.7.4"
mypy = "^1.0.0"


[tool.poetry.group.producer.dependencies]
tweepy = {extras = ["async"], version = "^4.12.1"}
confluent-kafka = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
